# Matrix-Inversion-openMPI

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Matrix.cpp  Matrix.hpp  MpiUtils.cpp  MpiUtils.h  MpiUtils.hpp  README  README.md  cmake_install.cmake  main.cpp  out  pp_tp3
